еще поправила по автотестам

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </form>
         </section>
         <header class="header">
-            <img src="./images/logo.svg" alt="Mesto" class="header__logo">
+            <img src="./images/logo.svg" alt="Место" class="header__logo">
             <div class="header__border"></div>
         </header>
         <main class="main">
