--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <form id="1" class="popup__container">
                 <button type="button" class="popup__close-button button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input type="text" value="" class="popup__input input_type_name">
-                <input type="text" value="" class="popup__input input_type_description">
+                <input type="text" value="" class="popup__input input_type-name">
+                <input type="text" value="" class="popup__input input_type-description">
                 <button type="submit" class="popup__add-button button">Сохранить</button>
             </form>
         </section>
@@ -33,9 +33,7 @@
                     </div>
                     <button class="profile__edit-button button"></button>              
                 </div>
-                <button class="profile__add-button button">
-                    <img src="./images/add.svg" alt="Добавить" class="profile__add-button_image">
-                </button>
+                <button class="profile__add-button button"></button>
             </section>
             <section class="photo-grid">
                 <div class="card">
