--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <form id="1" class="popup__container">
                 <button type="button" class="popup__close-button button"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input type="text" value="" class="popup__input input_type-name">
-                <input type="text" value="" class="popup__input input_type-description">
+                <input type="text" value="" class="popup__input popup__input_type_name">
+                <input type="text" value="" class="popup__input popup__input_type_description">
                 <button type="submit" class="popup__add-button button">Сохранить</button>
             </form>
         </section>
