--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 <body>
     <div class="page">
-        <section class="popup">
-            <form id="1" class="popup__container">
+        <div class="popup">
+            <div class="popup__container">
                 <button type="button" class="popup__close-button button"></button>
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <input type="text" value="" class="popup__input popup__input_type_name">
-                <input type="text" value="" class="popup__input popup__input_type_description">
-                <button type="submit" class="popup__add-button button">Сохранить</button>
-            </form>
-        </section>
+                <form id="1" class="popup__form" name="profile_edit_form">
+                    <h2 class="popup__title">Редактировать профиль</h2>
+                    <input type="text" value="" name="name" class="popup__input popup__input_type_name">
+                    <input type="text" value="" name="job" class="popup__input popup__input_type_description">
+                    <button type="submit" class="popup__add-button">Сохранить</button>
+                </form>
+            </div>
+        </div>
         <header class="header">
             <img src="./images/logo.svg" alt="Место" class="header__logo">
-            <div class="header__border"></div>
         </header>
         <main class="main">
             <section class="profile">
@@ -31,51 +32,51 @@
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
                         <p class="profile__description">Исследователь океана</p>
                     </div>
-                    <button class="profile__edit-button button"></button>              
+                    <button type="button" class="profile__edit-button button"></button>              
                 </div>
-                <button class="profile__add-button button"></button>
+                <button type="button" class="profile__add-button button"></button>
             </section>
             <section class="photo-grid">
                 <div class="card">
                     <img src="./images/Karachaevsk.jpg" alt=" Карачаевск" class="card__image">
                     <div class="card__description">
                         <h2 class="card__title">Карачаевск</h2>
-                        <button class="card__button button"></button>
+                        <button type="button" class="card__button"></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="card__image">
                     <div class="card__description">
                         <h2 class="card__title">Гора Эльбрус</h2>
-                        <button class="card__button button"></button>
+                        <button type="button" class="card__button"></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./images/Dombay.jpg" alt="Домбай" class="card__image">
                     <div class="card__description">
                         <h2 class="card__title">Домбай</h2>
-                        <button class="card__button button"></button>
+                        <button type="button" class="card__button"></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="card__image">
                     <div class="card__description">
                         <h2 class="card__title">Гора Эльбрус</h2>
-                        <button class="card__button button"></button>
+                        <button type="button" class="card__button"></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./images/Dombay.jpg" alt="Домбай" class="card__image">
                     <div class="card__description">
                         <h2 class="card__title">Домбай</h2>
-                        <button class="card__button button"></button>
+                        <button type="button" class="card__button"></button>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./images/Karachaevsk.jpg" alt="Карачаево-Черкессия" class="card__image">
                     <div class="card__description">
                         <h2 class="card__title">Карачаево-Черкессия</h2>
-                        <button class="card__button button"></button>
+                        <button type="button" class="card__button"></button>
                     </div>
                 </div>
             </section>
