--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2 class="popup__title">Новое место</h2>
                     <input type="text" value="" name="place" placeholder="Название" class="popup__input popup__input_type_place">
                     <input type="text" value="" name="image" placeholder="Ссылка на картинку" class="popup__input popup__input_type_image">
-                    <button type="submit" class="popup__add-button">Сохранить</button>
+                    <button type="submit" class="popup__add-button">Создать</button>
                 </form>
             </div>
         </div>
@@ -36,6 +36,7 @@
             <div class="popup__container_type_image">
                 <button type="button" class="popup__close-button button"></button>
                 <img src="#" alt="изображение" class="popup__image">
+                <p class="popup__subtitle"></p>
             </div>
         </div>
         
@@ -55,49 +56,7 @@
                 <button type="button" class="profile__add-button button"></button>
             </section>
             <section class="photo-grid">
-               <!-- <div class="card">
-                    <img src="./images/Karachaevsk.jpg" alt=" Карачаевск" class="card__image">
-                    <button type="button" class="card__delete-button button"></button>
-                    <div class="card__description">
-                        <h2 class="card__title">Карачаевск</h2>
-                        <button type="button" class="card__button"></button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="card__image">
-                    <div class="card__description">
-                        <h2 class="card__title">Гора Эльбрус</h2>
-                        <button type="button" class="card__button"></button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./images/Dombay.jpg" alt="Домбай" class="card__image">
-                    <div class="card__description">
-                        <h2 class="card__title">Домбай</h2>
-                        <button type="button" class="card__button"></button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="card__image">
-                    <div class="card__description">
-                        <h2 class="card__title">Гора Эльбрус</h2>
-                        <button type="button" class="card__button"></button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./images/Dombay.jpg" alt="Домбай" class="card__image">
-                    <div class="card__description">
-                        <h2 class="card__title">Домбай</h2>
-                        <button type="button" class="card__button"></button>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./images/Karachaevsk.jpg" alt="Карачаево-Черкессия" class="card__image">
-                    <div class="card__description">
-                        <h2 class="card__title">Карачаево-Черкессия</h2>
-                        <button type="button" class="card__button"></button>
-                    </div>
-                </div>!-->
+               
             </section>
         </main>
         <footer class="footer">
