поправила по автотестам

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="popup popup_type_image">
-            <div class="popup__container_image">
+            <div class="popup__container popup__container_type_image">
                 <button type="button" class="popup__close-button button"></button>
                 <img src="#" alt="изображение" class="popup__image">
                 <p class="popup__subtitle"></p>
