поправила по автотестам

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <form novalidate id="1" class="popup__form" name="profile_edit_form">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <div class="popup__input-container">
-                        <input required type="text" value="" name="name" id="popup__input_type_name" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
-                        <span class="popup__input-error popup__input_type_name_error"></span>
+                        <input required type="text" value="" name="name" id="name-input" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
+                        <span class="popup__input-error name-input-error"></span>
                     </div>
                     <div class="popup__input-container">
-                        <input required type="text" value="" name="job" id="popup__input_type_description" class="popup__input popup__input_type_description" minlength="2" maxlength="200">
-                        <span class="popup__input-error popup__input_type_description_error"></span>
+                        <input required type="text" value="" name="job" id="description-input" class="popup__input popup__input_type_description" minlength="2" maxlength="200">
+                        <span class="popup__input-error description-input-error"></span>
                     </div>
                     <button type="submit" class="popup__add-button button">Сохранить</button>
                 </form>
@@ -33,12 +33,12 @@
                 <form novalidate id="2" class="popup__form" name="profile_card_form">
                     <h2 class="popup__title">Новое место</h2>
                     <div class="popup__input-container">
-                        <input required type="text" value="" name="place" placeholder="Название" id="popup__input_type_place" class="popup__input popup__input_type_place" minlength="2" maxlength="30">
-                        <span class="popup__input-error popup__input_type_place_error"></span>
+                        <input required type="text" value="" name="place" placeholder="Название" id="place-input" class="popup__input popup__input_type_place" minlength="2" maxlength="30">
+                        <span class="popup__input-error place-input-error"></span>
                     </div>
                     <div class="popup__input-container">
-                        <input required type="url" value="" name="image" placeholder="Ссылка на картинку" id="popup__input_type_image" class="popup__input popup__input_type_image">
-                        <span class="popup__input-error popup__input_type_image_error"></span>
+                        <input required type="url" value="" name="image" placeholder="Ссылка на картинку" id="image-input" class="popup__input popup__input_type_image">
+                        <span class="popup__input-error image-input-error"></span>
                     </div>
                     <button type="submit" class="popup__add-button button">Создать</button>
                 </form>
