--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="popup popup_type_edit-profile">
             <div class="popup__container">
                 <button type="button" class="popup__close-button button"></button>
-                <form novalidate id="1" class="popup__form" name="profile_edit_form">
+                <form novalidate id="1" class="popup__form popup__form_edit" name="profile_edit_form">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <div class="popup__input-container">
                         <input required type="text" value="" name="name" id="name-input" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
@@ -30,7 +30,7 @@
         <div class="popup popup_type_add-card">
             <div class="popup__container">
                 <button type="button" class="popup__close-button button"></button>
-                <form novalidate id="2" class="popup__form" name="profile_card_form">
+                <form novalidate id="2" class="popup__form popup__form_add" name="profile_card_form">
                     <h2 class="popup__title">Новое место</h2>
                     <div class="popup__input-container">
                         <input required type="text" value="" name="place" placeholder="Название" id="place-input" class="popup__input popup__input_type_place" minlength="2" maxlength="30">
@@ -85,7 +85,7 @@
             </div>
         </div>
     </template>
-    <script src="scripts/validate.js"></script>
-    <script src="scripts/index.js"></script>   
+    
+    <script type="module" src="scripts/index.js"></script>   
 </body>
 </html>
