--- a/index.html
+++ b/index.html
@@ -87,5 +87,7 @@
     </template>
     
     <script type="module" src="scripts/index.js"></script>   
+    <script type="module" src="scripts/validate.js"></script>  
+    <script type="module" src="scripts/card.js"></script>  
 </body>
 </html>
