--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 <form novalidate id="1" class="popup__form popup__form_edit" name="profile_edit_form">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <div class="popup__input-container">
-                        <input required type="text" value="" name="name" id="name-input" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
+                        <input required type="text" value="" name="username" id="name-input" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
                         <span class="popup__input-error name-input-error"></span>
                     </div>
                     <div class="popup__input-container">
@@ -33,11 +33,11 @@
                 <form novalidate id="2" class="popup__form popup__form_add" name="profile_card_form">
                     <h2 class="popup__title">Новое место</h2>
                     <div class="popup__input-container">
-                        <input required type="text" value="" name="place" placeholder="Название" id="place-input" class="popup__input popup__input_type_place" minlength="2" maxlength="30">
+                        <input required type="text" value="" name="name" placeholder="Название" id="place-input" class="popup__input popup__input_type_place" minlength="2" maxlength="30">
                         <span class="popup__input-error place-input-error"></span>
                     </div>
                     <div class="popup__input-container">
-                        <input required type="url" value="" name="image" placeholder="Ссылка на картинку" id="image-input" class="popup__input popup__input_type_image">
+                        <input required type="url" value="" name="link" placeholder="Ссылка на картинку" id="image-input" class="popup__input popup__input_type_image">
                         <span class="popup__input-error image-input-error"></span>
                     </div>
                     <button type="submit" class="popup__add-button button">Создать</button>
@@ -53,12 +53,12 @@
         </div>
         
         <header class="header">
-            <img src="./images/logo.svg" alt="Место" class="header__logo">
+            <img src="<%=require('./images/logo.svg')%>" alt="Место" class="header__logo">
         </header>
         <main class="main">
             <section class="profile">
                 <div class="profile__info">
-                    <img src="./images/jaque.jpg" alt="Фото" class="profile__avatar">
+                    <img src="<%=require('./images/jaque.jpg')%>" alt="Фото" class="profile__avatar">
                     <div class="profile__text">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
                         <p class="profile__description">Исследователь океана</p>
@@ -86,8 +86,6 @@
         </div>
     </template>
     
-    <script type="module" src="scripts/index.js"></script>   
-    <script type="module" src="scripts/validate.js"></script>  
-    <script type="module" src="scripts/card.js"></script>  
+    <script type="module" src="./scripts/index.js"></script>   
 </body>
 </html>
