--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         
+     
     <title>Mesto</title>
 </head>
 <body>
@@ -15,15 +15,37 @@
                 <form novalidate id="1" class="popup__form popup__form_edit" name="profile_edit_form">
                     <h2 class="popup__title">Редактировать профиль</h2>
                     <div class="popup__input-container">
-                        <input required type="text" value="" name="username" id="name-input" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
+                        <input required type="text" value="" name="name" id="name-input" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
                         <span class="popup__input-error name-input-error"></span>
                     </div>
                     <div class="popup__input-container">
-                        <input required type="text" value="" name="job" id="description-input" class="popup__input popup__input_type_description" minlength="2" maxlength="200">
+                        <input required type="text" value="" name="about" id="description-input" class="popup__input popup__input_type_description" minlength="2" maxlength="200">
                         <span class="popup__input-error description-input-error"></span>
                     </div>
                     <button type="submit" class="popup__add-button button">Сохранить</button>
                 </form>
+            </div>
+        </div>
+        <div class="popup popup_type_edit-avatar">
+            <div class="popup__container">
+                <button type="button" class="popup__close-button button"></button>
+                <form novalidate id="1" class="popup__form popup__form_edit-avatar" name="profile_edit_avatar_form">
+                    <h2 class="popup__title">Обновить аватар</h2>
+                    <div class="popup__input-container">
+                        <input required type="url" value="" name="avatar" id="avatar-input" class="popup__input popup__input_type_avatar"  placeholder="Ссылка на картинку">
+                        <span class="popup__input-error avatar-input-error"></span>
+                    </div>
+                    <button type="submit" class="popup__add-button button">Сохранить</button>
+                </form>
+            </div>
+        </div>
+        <div class="popup popup_type_delete_card">
+            <div class="popup__container">
+                <button type="button" class="popup__close-button button"></button>
+                    <h2 class="popup__title">Вы уверены?</h2>
+                    <form class="popup__form popup__form_submit">
+                    </form>
+                    <button type="submit" class="popup__add-button popup__add-button_type_delete button">Да</button>
             </div>
         </div>
         <div class="popup popup_type_add-card">
@@ -57,10 +79,12 @@
         <main class="main">
             <section class="profile">
                 <div class="profile__info">
-                    <img src="<%=require('./images/jaque.jpg')%>" alt="Фото" class="profile__avatar">
+                    <div class="profile__avatar_edit-icon">
+                        <img src="" alt="Фото" class="profile__avatar">
+                    </div>
                     <div class="profile__text">
-                        <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <p class="profile__description">Исследователь океана</p>
+                        <h1 class="profile__name"></h1>
+                        <p class="profile__description"></p>
                     </div>
                     <button type="button" class="profile__edit-button button"></button>              
                 </div>
@@ -80,7 +104,10 @@
             <button type="button" class="card__delete-button button"></button>
             <div class="card__description">
                 <h2 class="card__title"></h2>
-                <button type="button" class="card__like-button"></button>
+                <div class="card__like">
+                    <button type="button" class="card__like-button"></button>
+                    <p class="card__like-counter">0</p>
+                </div>
             </div>
         </div>
     </template>
