--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         <div class="popup popup_type_edit-avatar">
             <div class="popup__container">
                 <button type="button" class="popup__close-button button"></button>
-                <form novalidate id="1" class="popup__form popup__form_edit-avatar" name="profile_edit_avatar_form">
+                <form novalidate id="3" class="popup__form popup__form_edit-avatar" name="profile_edit_avatar_form">
                     <h2 class="popup__title">Обновить аватар</h2>
                     <div class="popup__input-container">
                         <input required type="url" value="" name="avatar" id="avatar-input" class="popup__input popup__input_type_avatar"  placeholder="Ссылка на картинку">
@@ -80,7 +80,7 @@
             <section class="profile">
                 <div class="profile__info">
                     <div class="profile__avatar_edit-icon">
-                        <img src="" alt="Фото" class="profile__avatar">
+                        <img src="#" alt="Фото" class="profile__avatar">
                     </div>
                     <div class="profile__text">
                         <h1 class="profile__name"></h1>
