--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup_type_delete_card">
+        <div class="popup popup_type_delete-card">
             <div class="popup__container">
                 <button type="button" class="popup__close-button button"></button>
                     <h2 class="popup__title">Вы уверены?</h2>
@@ -79,7 +79,7 @@
         <main class="main">
             <section class="profile">
                 <div class="profile__info">
-                    <div class="profile__avatar_edit-icon">
+                    <div class="profile__avatar-edit-icon">
                         <img src="#" alt="Фото" class="profile__avatar">
                     </div>
                     <div class="profile__text">
